--- a/payment.html
+++ b/payment.html
@@ -1,11 +1,23 @@
-<?php
-include('./includes/header.php');
-include('./includes/nav.php');
-
-?>
-
-<!-- Page Content -->
-  <div class="products">
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Payment</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link rel="stylesheet" href="payment.css">
+</head>
+<body>
+  <main class="page payment-page">
+    <section class="payment-form dark">
+      <div class="container">
+        <div class="block-heading">
+          <h2>Payment</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+        </div>
+        <form>
+          <div class="products">
             <h3 class="title">Checkout</h3>
             <tr>
             <div class="item">
@@ -44,22 +56,17 @@ include('./includes/nav.php');
                 <input id="cvc" type="text" class="form-control" placeholder="CVC" aria-label="Card Holder" aria-describedby="basic-addon1">
               </div>
               <div class="form-group col-sm-12">
-                
+                 <a href="./Mpesa/MpesaProcessor.php?amount=1" class="btn btn-success">Proceed</a>
                 
               </div>
             </div>
           </div>
-                    <a href="./MpesaProcessor.php?amount=1" class="btn btn-success">checkout</a>
-                </div>
-            </div>
-            <!-- /.card -->
-
-        </div>
-        <!-- /.col-lg-9 -->
-
-    </div>
-
-</div>
-<!-- /.container -->
-
-<?php include('./includes/footer.php');
+        </form>
+      </div>
+    </section>
+  </main>
+</body>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</body>
+</html>
